--- a/server/wheresmy.conf
+++ b/server/wheresmy.conf
@@ -1,5 +1,13 @@
 #!upstart
+description "Where is my bus Socket Service"
+
+# automatically start
+# start on filesystem
+
+# working directory
+chdir /var/www/experiments/where-is-my-bus/current
+
+# command to run, with Bundler support!
+exec bundle exec ruby server/server_service.rb
+
 respawn
-script
-  ruby /var/www/experiments/where-is-my-bus/server/server_service.rb
-end script
